# ServerArchKiwi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  server
inc/: connectionHandler.hpp  logger.hpp  robotManager.hpp  server.hpp
src/: connectionHandler.cpp  logger.cpp  main.cpp  robotManager.cpp  server.cpp
